# tavily-hikari

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  build.rs  bunfig.toml  dprint.json  lefthook.yml  package-lock.json  package.json
.github/scripts/: assemble-pages-site.sh  compute-version.sh  release-intent.sh  release-mcp-billing-smoke.sh
.github/workflows/: ci.yml  docs-pages.yml  label-gate.yml  notify-release-failure.yml  release.yml
docs/: high-anonymity-proxy.md  quota-design.md  tavily-http-api-proxy.md
docs-site/: package.json  rspress.config.ts
docs/adr/: 0001-ha-planned-cutover-control-plane.md
docs/plan/: README.md
docs/specs/: README.md
examples/forwardauth-caddy/: Caddyfile  README.md  docker-compose.yml
scripts/: capture-rankings-evidence.mjs  capture_admin_pressure_storybook.mjs  ci_backend_test_manifest.json  ci_backend_tests.py  start-backend-dev.sh  start-frontend-dev.sh
src/: analysis.rs  forward_proxy.rs  ha.rs  lib.rs  linuxdo_credit_recharge.rs  main.rs  models.rs  runtime_logging.rs  server.rs  upstream_privacy.rs  web_assets.rs
src/forward_proxy/: manager.rs  relay_and_xray.rs  responses_and_validation.rs  settings_and_endpoints.rs  storage.rs  (+1 more)
tests/: mcp_billing_regression.rs  mcp_session_affinity_e2e.rs  rust_source_line_budgets.rs  server_http_contract.rs  test_tavily_hikari_agent_skills.py
web/: README.md  bunfig.toml  components.json  console.html  index.html  login.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.json  vite.config.ts
(+585 files in other folders)
