[package]
name = "tavily-hikari"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
bytes = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["stream"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
url = "2.5"
serde_json = "1"
